fixed logo, added dropdown for gallery

--- a/website/index.html
+++ b/website/index.html
@@ -8,14 +8,19 @@
 </head>    
         
 <body>
-    <div id = "Nav" style="max-width:100%">
+    <div id = "Nav">
         <div id = "Nav_wrapper">
             <ul>
                 <li>
                 <a href="contact.html">Contact</a>
                 </li>  
-                <li>
-                <a href="gallery.php">Gallery & Prints</a>
+                <li class= "dropdown">
+                <a href="javascript:void(0)" class ="dropdwn" >Gallery & Prints</a>
+                <div class ="gallery-dropdown">
+                    <a href ="RegularPictures.html">Still Pictures</a>
+                    <a href ="TimeLapse.html">TimeLapses </a>
+                    <a href = "videos.html">Videos </a>
+                </div>    
                 </li>
                 <li>
                 <a href="Index.html">Home</a>
@@ -23,7 +28,7 @@
             </ul>
         </div>
         <div id="Logo">
-      <img src="Images/logo.png" style="height: 50%;max-width:100%;">
+      <img class = "logo2" src="Images/logo2.png" >
         </div>
         
     </div>
