Navbar and bottm area

--- a/BootstrapWebsite/index.html
+++ b/BootstrapWebsite/index.html
@@ -9,6 +9,7 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -20,7 +21,7 @@
   <body>
     <div class="container">
         <nav class="navbar navbar-default">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand" href ="index.html" class = "navbar-left" rel="home" title=" Fuck">
                     <img style ="max-width: 100px; margin-top: -7px"
@@ -29,11 +30,34 @@
                 </div>
                 <ul class="nav navbar-nav">
                     <li class="active"><a href ="#">Home</a></li>
-                    <li><a href ="gallery.php">Gallery & Prints</a></li>
+                    <li><a href ="gallery.php">Gallery & Prints</a>
+                    </li>
                     <li><a href ="contact.html">Contact </a></li>
                 </ul>
             </div>
         </nav>
+    <div class="container-fluid">
+        <div class="container">
+        <div class="row">
+            <div class="col-sm-4" style="background-color:grey;" display = "inline">
+                <img src="Images/Nature/beach.jpg" style="max-width: 200px">
+                <div class="GalleryText1">Landscape</div>
+                <div><button>View Gallery</button></div>
+            </div>
+            <div class="col-sm-4" style="background-color:grey;">
+                <img src="Images/Nature/lake.jpg" style="max-width: 200px">
+                <div class="GalleryText2">Timelapse</div>
+                <div><button>View Gallery</button></div>
+            </div>
+            <div class="col-sm-4" style="background-color:grey;">
+                <img src="Images/Nature/nightsky.jpg" style="max-width: 200px">
+                <div lass="GalleryText3">Video</div>
+                <div><button>View Gallery</button></div>
+            </div> 
+        </div>
+        </div>    
+    </div>
+ 
         
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
