fixed contact nav bar

--- a/BootstrapWebsite/index.html
+++ b/BootstrapWebsite/index.html
@@ -29,7 +29,7 @@
 -->
 
 <!-- Body container      -->
-<div class="container">
+<div class="container-fluid">
   
 <!--  navigation bar  -->
 <div class="row">
@@ -62,7 +62,7 @@
 
 </div>
 
-     <div class="row2">
+     <div class="container-fluid">
             <div class="col-sm-4" style="background-color:grey;" display = "inline">
                 <img src="Images/Nature/beach.jpg" style="max-width: 200px">
                 <div class="GalleryText1">Landscape</div>
